--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,39 +1,47 @@
-# Version minimale requise de CMake
 cmake_minimum_required(VERSION 3.10)
-# Nom du projet
 project(Awale C)
-# Définir le standard C à utiliser
+
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 
-# Créer une bibliothèque pour le code commun d'Awale
-add_library(awale_lib
- awale.c
- awale_save.c
-)
-
-# Ajouter les headers pour la bibliothèque
-target_include_directories(awale_lib PUBLIC
-${CMAKE_CURRENT_SOURCE_DIR}
-)
-
-# Créer l'exécutable serveur
-add_executable(server
- server.c
-)
-
-# Lier la bibliothèque awale_lib et la bibliothèque mathématique
-target_link_libraries(server PRIVATE 
- awale_lib 
- m  # Ajout de la bibliothèque mathématique
-)
-
-# Créer l'exécutable client
-add_executable(client
- client1.c
-)
-
-target_link_libraries(client PRIVATE awale_lib)
-
-# Créer un répertoire pour les fichiers de sauvegarde dans le dossier de build
+# Create directories in build folder
 file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/saves)
+
+# Common source files
+set(SERVER_SOURCES
+    server/server.c
+    server/command.c
+    server/util.c
+)
+
+set(AWALE_SOURCES
+    awale/awale.c
+    awale/awale_save.c
+)
+
+# Create awale library
+add_library(awale_lib ${AWALE_SOURCES})
+target_include_directories(awale_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+
+# Create server executable
+add_executable(server ${SERVER_SOURCES})
+target_include_directories(server PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(server 
+    PRIVATE 
+        awale_lib
+        m
+)
+
+# Create client executable
+add_executable(client client/client1.c)
+target_include_directories(client PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(client
+    PRIVATE
+        awale_lib
+)
+
+# Add platform-specific libraries if needed
+if(WIN32)
+    target_link_libraries(server PRIVATE wsock32 ws2_32)
+    target_link_libraries(client PRIVATE wsock32 ws2_32)
+endif()
